# video_ai_dev

./: .gitignore
apps/local_cpp_video_pipeline/: CMakeLists.txt  README.md
apps/local_cpp_video_pipeline/scripts/: build.ps1  run_demo.ps1
apps/local_cpp_video_pipeline/src/: main.cpp
docs/: ENVIRONMENT.md  ROADMAP.md  低延迟视频AI推理系统_设计文档.docx  低延迟视频AI推理系统_设计文档.md  开发协作规范.md
scripts/: env_check.ps1  generate_design_doc.py
